--- a/src/main/resources/fxml/index.fxml
+++ b/src/main/resources/fxml/index.fxml
@@ -15,24 +15,25 @@
          <Font size="18.0" />
       </font></Label>
 
-    <Button layoutX="29.0" layoutY="51.0" mnemonicParsing="false" onAction="#chooseDataPath" prefHeight="23.0" prefWidth="142.0" text="选择考生信息Excel" />
-    <Label fx:id="dataPathLabel" layoutX="185.0" layoutY="55.0" />
+    <Button layoutX="29.0" layoutY="51.0" mnemonicParsing="false" onAction="#chooseDataPath" prefHeight="23.0" prefWidth="154.0" text="选择考生信息Excel" />
+    <Label fx:id="dataPathLabel" layoutX="190.0" layoutY="55.0" />
 
-    <Button layoutX="29.0" layoutY="89.0" mnemonicParsing="false" onAction="#chooseRoomPath" prefHeight="23.0" prefWidth="141.0" text="选择试场场次规格Excel" />
-    <Label fx:id="roomPathLabel" layoutX="185.0" layoutY="93.0" />
+    <Button layoutX="29.0" layoutY="89.0" mnemonicParsing="false" onAction="#chooseRoomPath" prefHeight="23.0" prefWidth="154.0" text="选择试场场次规格Excel" />
+    <Label fx:id="roomPathLabel" layoutX="190.0" layoutY="93.0" />
 
-    <Button layoutX="29.0" layoutY="129.0" mnemonicParsing="false" onAction="#choosePicDir" prefHeight="23.0" prefWidth="142.0" text="选择考生照片文件夹" />
-    <Label fx:id="picPathLabel" layoutX="185.0" layoutY="133.0" />
+    <Button layoutX="29.0" layoutY="129.0" mnemonicParsing="false" onAction="#choosePicDir" prefHeight="23.0" prefWidth="154.0" text="选择考生照片文件夹" />
+    <Label fx:id="picPathLabel" layoutX="190.0" layoutY="133.0" />
 
     <ListView fx:id="infoListView" layoutX="29.0" layoutY="163.0" prefHeight="100.0" prefWidth="411.0" />
 
     <Button layoutX="29.0" layoutY="279.0" mnemonicParsing="false" onAction="#openBrowser" text="打开浏览器" />
     <Button layoutX="376.0" layoutY="279.0" mnemonicParsing="false" onAction="#intro" text="使用说明" />
-    <Button layoutX="272.0" layoutY="279.0" mnemonicParsing="false" onAction="#downloadExcelTemplate" text="下载Excel模板" />
-   <Label layoutX="365.0" layoutY="314.0" text="嘉兴市教育考试院" textFill="#b5b5b5">
+   <Label layoutX="376.0" layoutY="314.0" text="嘉兴市教育考试院" textFill="#b5b5b5">
       <font>
          <Font size="9.0" />
       </font>
    </Label>
+    <Button fx:id="download1" layoutX="218.0" layoutY="291.0" mnemonicParsing="false" onAction="#downloadExcelTemplate1" text="考生信息Excel模板下载" />
+    <Button fx:id="download2" layoutX="218.0" layoutY="268.0" mnemonicParsing="false" onAction="#downloadExcelTemplate2" text="试场场次Excel模板下载" />
 
 </AnchorPane>
