--- a/src/main/resources/fxml/index.fxml
+++ b/src/main/resources/fxml/index.fxml
@@ -10,7 +10,7 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
 
-    <Label layoutX="97.0" layoutY="14.0" text="嘉兴市职业技能操作考试试场编排系统">
+    <Label layoutX="97.0" layoutY="14.0" text="考试试场编排系统">
       <font>
          <Font size="18.0" />
       </font></Label>
